3/19/2023: Karl
- Update communication.CommentReport to match design document field names


3/18/2023 : Karl
- Finished back-end portion of pipeline for sending CommentReports. Wrote SQL query. Validates if domain is one moderated for domain moderator or global moderator. Will send all commentReports to Global and Admins if the domain requested is 'all', otherwise will provide just for a specific domain. 

3/17/2023 : Karl 
- PostCommentReport, needed queries and routes, also added 2 default reports to the 2nd migration

3/12/2023: Luke & Karl
- Started pipeline for sending CommentReports

3/12/2023: Karl
- AssignGlobalModerator, AssignAdmin structs and pipeline 
- Changing a logged-in user's controller will swap it at runtime and push a login response to the user's nextmessages so their front end can quickly realize the changes. 
- Added a 2nd migration to populate some test data (admin user karl pw karlkarl, globalmod user luke pw lukeluke)

3/8/2023 : Karl 
- SCHEMA CHANGE: GlobalModeratorAssignments is_deactivation now NOT NULL. Re migrate your DBs!
- umanager.go : domain and global moderator controllers initialized and assigned when appropriate 
- added methods to domain and global moderator controllers where polymorphically necessary 
- Queries.GetDomainModeratorAssignments, Queries.GetGlobalModeratorAssignments (sqlc generated)
- Store.GetDomainModeratorAssignments, Store.IsGlobalModerator
- user profile in login response now populated correct based on SQL table for IsDomainModerator, IsGlobalModerator, and DomainsModerating. Data can be used as appropriate to realize UI on the front end. 

3/1/2023 : Karl 
- newFeedback implemented

2/26/2023 : Karl
- Server now produces error if it fails to connect to server 
- Getting admin user level redone in a more reliable way

2/24/2023 : Karl 
- ViewUsersReport pipeline
- ToggleFeedbackHidden pipeline 
- ViewFeedbackSection pipeline 
- Assign AdminControllers to admins 
- Store.IsAdmin 